--- a/index.html
+++ b/index.html
@@ -4,11 +4,27 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <script type="text/javascript" src="script.js"></script>
   <link rel="stylesheet" href="style.css">
   <title>rock-paper-scissors</title>
 </head>
+
 <body>
-  <h1>rock-paper-scissors</h1>
+  <div class="title">
+    <h1 class="h1">rock-paper-scissors</h1>
+  </div>
+ 
+  <div class="buttons">
+    <button class="rock">rock</button>
+    <button class="paper">paper</button>
+    <button class="scissors">scissors</button>
+  </div>
+
+  <div class="result"></div>
+  <div class="playerPoints"></div>
+  <div class="compPoints"></div>
+
+  <script src="script.js"></script>
 </body>
+
 </html>
+
